--- a/Twitter_Scroll_Meter/manifest.json
+++ b/Twitter_Scroll_Meter/manifest.json
@@ -11,7 +11,12 @@
         "service_worker": "background.js"
     },
     "action": {
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "icon16.png",
+            "48": "icon48.png",
+            "128": "icon128.png"
+        }
     },
     "content_scripts": [
         {
@@ -35,5 +40,10 @@
                 "<all_urls>"
             ]
         }
-    ]
+    ],
+    "icons": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+    }
 }
