--- a/Twitter_Scroll_Meter/manifest.json
+++ b/Twitter_Scroll_Meter/manifest.json
@@ -1,11 +1,10 @@
 {
     "manifest_version": 3,
     "name": "Twitter Scroll Meter",
-    "version": "1.0",
-    "description": "Twitterのスクロール量を計測します。",
+    "version": "1.1.0",
+    "description": "Twitter/Xのスクロール量を計測します。",
     "permissions": [
-        "storage",
-        "scripting"
+        "storage"
     ],
     "background": {
         "service_worker": "background.js"
