--- a/Twitter_Scroll_Meter/manifest.json
+++ b/Twitter_Scroll_Meter/manifest.json
@@ -12,9 +12,9 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "icon16.png",
-            "48": "icon48.png",
-            "128": "icon128.png"
+            "16": "img/icon16.png",
+            "48": "img/icon48.png",
+            "128": "img/icon128.png"
         }
     },
     "content_scripts": [
@@ -41,8 +41,8 @@
         }
     ],
     "icons": {
-        "16": "icon16.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
+        "16": "img/icon16.png",
+        "48": "img/con48.png",
+        "128": "img/icon128.png"
     }
 }
