--- a/Twitter_Scroll_Meter/manifest.json
+++ b/Twitter_Scroll_Meter/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Twitter Scroll Meter",
-    "version": "1.1.2",
+    "version": "1.2.1",
     "description": "Twitter/Xのスクロール量を計測します。",
     "permissions": [
         "storage"
@@ -33,7 +33,9 @@
         {
             "resources": [
                 "setting.html",
-                "setting.js"
+                "setting.js",
+                "setPPI.html",
+                "setPPI.js"
             ],
             "matches": [
                 "<all_urls>"
@@ -42,7 +44,7 @@
     ],
     "icons": {
         "16": "img/icon16.png",
-        "48": "img/con48.png",
+        "48": "img/icon48.png",
         "128": "img/icon128.png"
     }
 }
